Fixed banner content alignment

--- a/less/main.less
+++ b/less/main.less
@@ -35,6 +35,15 @@ body {
 
 section.banner{
   .banner();
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-content: center;
+  .flex-item{
+    padding: 20px;
+    text-align: center;
+  }
 }
 
 section.white{
